fixed horizontal scroll to whitespace

--- a/src/home/homepage.css
+++ b/src/home/homepage.css
@@ -87,7 +87,7 @@ background-color: #121212;
     }
     .firstlevel .left{
         height: 100vh;
-        width: 100vw;
+        width: 100%;
     }
     .firstlevel .right .small{
         font-size: 20px;
